styles/base.css
:root {
    
    --primary-color: #344E41;
    --secondary-color: #3A5A40;
    --accent1-color: #588157;
    --accent2-color: #A3B18A;
    --accent3-color: #ffffff;

    --heading-font: "Roboto", sans-serif;;
    --paragraph-font: "Roboto", sans-serif;

    --headline-color-on-white: var(--primary-color); 
    --headline-color-on-color: var(--accent3-color); 
    --paragraph-color-on-white: var(--primary-color); 
    --paragraph-color-on-color: var(--accent3-color); 
    --paragraph-background-color: var(--secondary-color);
    --nav-link-color: var(--accent3-color);
    --nav-background-color: var(--secondary-color);
    --nav-hover-link-color: var(--accent2-color);
    --nav-hover-background-color: var(--primary-color);
}

body {
    background-color: white;
    font-size: 24px;
    margin: 0;
    padding: 0;
    font-family: var(--paragraph-font);
    }

h1, h2 {
    font-family: var(--heading-font);
    margin: 0;
    padding: 0 ;
}

p {
    font-family: var(--paragraph-font);
    padding: 1em;
    
}

header {
    display: grid;
    grid-template-columns: auto; 
    grid-template-rows: auto ; 
}

header h2 {
    grid-column: 1;
    grid-row: 1;
    background-color: var(--accent3-color);
    color: var(--headline-color-on-white);
    padding: 1em;
    text-align: center;
}

#course-title {
    font-size: 26px;
}

nav {
    max-width: 100%;
    grid-column: 1;
    grid-row: 2;
    background-color: var(--nav-background-color);
	padding: 20px;
    list-style: none;
	display: flex;
	align-items: center;
}


nav a {
    display: block;
    font-family: var(--heading-font);
	color: var(--nav-link-color);
	padding: 0.75rem;
	text-decoration: none;
	text-align: center;
    flex: 1 1 100%;
}

nav a:hover {
	font-weight: 500;
	text-decoration: underline;
    background-color: var(--nav-hover-background-color);
    color: var(--nav-hover-link-color);
    transform: scale(1.1);
}


main {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto 1fr auto auto;
    gap: 20px;
    margin: 20px;
}

main h1 {
    grid-column: 1 / 3;
    grid-row: 1;
    background-color: var(--accent3-color);
    color: var(--headline-color-on-white);
    padding: 1em;
    text-align: center;
    font-size: 26px;
}

.card {
    padding: 20px;
    color: var(--headline-color-on-color);
    text-align: center;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.card h2 {
    font-size: 26px;
    background-color: var(--headline-color-on-white);
}


.about {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: 1fr auto auto;
    grid-column: 1;
    grid-row: 2;
}

.about h2 {
    grid-row: 1;
}

.story {
    grid-row: 2;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 15px;
}

.story p {
grid-column:  1;
color: var(--paragraph-color-on-white);
margin: auto;
text-align: left;
}
.story img {
    padding: 15px;
    grid-column: 2;
    margin: auto;
}

.wyoming {
    grid-row: 3;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    gap: 15px;
}

.wyoming h2{
    font-size: 25px;
    grid-column: 1 / 3;
    grid-row: 1;
    color: var(--headline-color-on-white);
    background-color: var(--accent3-color);
    margin: 0;
    padding: 10px ;
    text-align: center;
    border-bottom: rgb(106, 104, 104) 3px solid ;
}
.wyoming img {
    grid-column: 1;
    grid-row: 2;
    margin: auto;

}

.wyoming p {
    grid-column: 2;
    grid-row: 2;
    color: var(--paragraph-color-on-white);
    margin: auto;
    text-align: left;
}
.aside {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto 1fr;
    gap: 20px;
    grid-column: 2;
    grid-row: 2;
    padding: 20px;
    background-color: var(--accent2-color);
    color: var(--headline-color-on-color);
    text-align: center;
}

.aside h2 {
    grid-row: 1;
    font-size: 26px;
    color: var(--heading-font);
}

.aside p {
    color: var(--paragraph-color-on-color);
}

.aside div {
    grid-row: 2;
    margin: 20px;
}

.aside ul {
    color: black;
    padding: 0;
    text-align: left;
}


footer {
    grid-column: 1 / 3;
    grid-row: 3;  
    background-color: var(--primary-color);
    color: var(--headline-color-on-color);
    text-align: center;
    height: 100px;
    padding: 10px 0;
}

footer p {
    margin: 0;
    padding: 0;
}

